--- a/Frontend/src/styles/ClientModal.css
+++ b/Frontend/src/styles/ClientModal.css
@@ -4,6 +4,10 @@
    Файл: client-modal.css
    ================================================ */
 
+select option:disabled {
+  display: none;
+}
+
 /* -------------------- Overlay -------------------- */
 .client-modal-overlay {
   position: fixed;
