--- a/Frontend/src/styles/ClientModal.css
+++ b/Frontend/src/styles/ClientModal.css
@@ -46,6 +46,15 @@
   padding: 0;
 }
 
+.client-modal-body input:-webkit-autofill,
+.client-modal-body input:-webkit-autofill:hover, 
+.client-modal-body input:-webkit-autofill:focus, 
+.client-modal-body input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 1000px #19213A inset !important;
+    -webkit-text-fill-color: var(--container-text-color, #fff) !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 .form-field {
   display: flex;
   flex-direction: row;
