--- a/Frontend/src/components/Client/ClientModal/TabsNav.css
+++ b/Frontend/src/components/Client/ClientModal/TabsNav.css
@@ -6,14 +6,14 @@
   list-style:none;
 }
 .tabs-nav li button{
-  all:unset;
-  cursor:pointer;
-  padding:6px 12px;
-  border-radius:4px 4px 0 0;
-  background:#123349;           /* цвет «неактивной» вкладки */
-  color:#fff;
-  font-size:.9rem;
-  transition:background .2s;
+  all: unset;
+    cursor: pointer;
+    padding: 12px 16px;
+    color: #a0a0b0;
+    font-size: 0.9rem;
+    transition: all 0.2s;
+    position: relative;
+    border-bottom: 3px solid transparent;
 }
 .tabs-nav li.active button{
     border-bottom-color: var(--container-text-color);
