--- a/Frontend/src/styles/EmployeeModal.css
+++ b/Frontend/src/styles/EmployeeModal.css
@@ -406,8 +406,7 @@
   display: flex;
   flex-direction: row;
   gap: 8px; 
-  margin-top: 8px;
-  padding: 10px;
+  padding: 6px;
   border-radius: 4px;
 }
 
@@ -478,10 +477,18 @@
 }
 
 .form-field-checkbox input[type="checkbox"] {
+  width: 16px;
+  height: 16px;
   cursor: pointer;
   background-color: #19213A;
   border: 1px solid #555;
   appearance: auto;
   -webkit-appearance: checkbox; 
   margin: 0;
+}
+
+
+.employee-modal input,
+.employee-modal textarea {
+  caret-color: #fff;
 }
