--- a/Frontend/src/styles/Fields.css
+++ b/Frontend/src/styles/Fields.css
@@ -502,7 +502,8 @@
 .add-category-btn {
     background-color: transparent;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 10px;
+    margin-left: -12px;
     border: none;
     border-radius: 6px;
     font-size: 14px;
