--- a/Frontend/src/styles/AddTransactionModal.css
+++ b/Frontend/src/styles/AddTransactionModal.css
@@ -283,6 +283,35 @@
     cursor: pointer;
 }
 
+/* Адаптация CreatableSelect для Транзакций*/
+.add-transaction-overlay .creatable-select-container {
+    flex-basis: 70%;
+    width: 100%;
+    min-width: 410px;
+    box-sizing: border-box;
+    position: relative;
+}
+.add-transaction-overlay .creatable-select-container .creatable-input {
+    background-color: var(--bg-menu-color);
+    border: none;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+    padding: 10px 12px;
+    color: var(--text-color);
+    font-size: 15px;
+    outline: none;
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 0;
+    min-width: 410px;
+}
+.add-transaction-overlay .creatable-select-container .creatable-input:focus {
+    border-bottom-color: var(--accent-color);
+}
+.add-transaction-overlay .creatable-select-container .creatable-dropdown {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+}
 
 @media (max-width: 768px) {
   .add-transaction-modal {
